[project]
name = "rov-25"
# I know Ben hates this but this required lol
version = "1.2.0"

dependencies = [
    # Need since mypy < 0.981 does not work with type stubs.
    # Ubuntu 24 has 1.9 so should be fine when we upgrade
    'mypy >= 1.7',
    'pyqt6',
    'pyqtgraph',
    'pyqtdarktheme',
    'pytest-qt',
    'pytest-xvfb',
    'TCA9555@git+https://github.com/InvincibleRMC/TCA9555',
    'bluerobotics-tsys01@git+https://github.com/bluerobotics/tsys01-python',
    'pymavlink',
    # Comment out for now because mavproxy installs numpy v2 breaking things :(
    #'mavproxy'
]

[tool]
line-length = 100

[tool.pydocstyle]
convention = "numpy"
add-ignore=[
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107"
]

[tool.mypy]
strict = true
# Done becuase tons of python packages are missing stubs or py.typed markers
ignore_missing_imports = true
# Done because some calls insides rclpy are not typed
disallow_untyped_calls = false
# Done because rclpy Node has type Any
disallow_subclassing_any = false

[tool.pytest.ini_options]   
qt_api = "pyqt6"

[tool.pylintrc]
disable = ["duplicate-code", "fixme"]
extension-pkg-whitelist = ["PyQt6", "cv2"]
