[project]
name = "rov-25"
# I know Ben hates this but this required lol
version = "1.2.0"
requires-python = ">=3.10"

dependencies = [
    'pyqt6',
    'pytest-qt',
    'TCA9555@git+https://github.com/InvincibleRMC/TCA9555',
    'bluerobotics-tsys01@git+https://github.com/bluerobotics/tsys01-python',
    'pymavlink',
    'mavproxy'
]

[tool.mypy]
strict = true
# Done becuase tons of python packages are missing stubs or py.typed markers
ignore_missing_imports = true
# Done because some calls insides rclpy are not typed
disallow_untyped_calls = false
# Done because rclpy Node has type Any
disallow_subclassing_any = false

[tool.pytest.ini_options]   
qt_api = "pyqt6"

[tool.pylintrc]
disable = ["duplicate-code", "fixme"]
extension-pkg-whitelist = ["PyQt6", "cv2"]

# For precommit CI
[tool.ruff]
format.quote-style = 'single'
exclude = ["src/surface/ros2_video_streamer"]

# Done to sort imports
line-length = 100
[tool.ruff.lint]
flake8-quotes.inline-quotes='single'
extend-select = ["ALL"]
fixable = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "T201", "FIX002", "TD003", "TD002", "TRY003", "EM101", "EM102", "RET504", "D211", "COM812", "ISC001", "ERA001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"test*" = ["S101", "INP001", "PLR2004"]
"setup.py" = ["INP001"]
"*/launch/*" = ["INP001"]