[project]
name = "rov-25"
# I know Ben hates this but this is required lol
version = "1.2.0"
requires-python = ">=3.12"

dependencies = [
    'pytest-qt',
    'bluerobotics-tsys01@git+https://github.com/bluerobotics/tsys01-python',
    'pymavlink',
    'mavproxy'
]

[tool.mypy]
strict = true
# Done because tons of Python packages are missing stubs or py.typed markers
ignore_missing_imports = true
# Done because some calls inside rclpy are not typed
disallow_untyped_calls = false
# Done because rclpy Node has type Any
disallow_subclassing_any = false

[tool.pytest.ini_options]
qt_api = "pyqt6"

# For pre-commit CI
[tool.ruff]
format.quote-style = 'single'
exclude = ["src/surface/ros2_video_streamer"]

# Done to sort imports
line-length = 100
[tool.ruff.lint]
flake8-quotes.inline-quotes='single'
extend-select = ["ALL"]
fixable = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "T201", "FIX002", "TD003", "TD002", "TRY003", "EM101", "EM102", "RET504", "D211", "COM812", "ISC001", "ERA001", "S602", "S603", "D205"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
"test*" = ["S101", "INP001", "PLR2004"]
"setup.py" = ["INP001"]
"*/launch/*" = ["INP001"]
