<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulators</name>
  <version>1.2.0</version>
  <description>Code for manipulators.</description>
  <maintainer email="gcm49@case.edu">Georgia Martinez</maintainer>
  <maintainer email="rmc170@case.edu">Michael Carlstrom</maintainer>
  <license>Apache License, Version 2.0</license>

  <!-- For pip installing git packages -->
  <build_depend>git</build_depend>

  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
