<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>temp_sensor</name>
  <version>1.2.0</version>
  <description>Measures temperature</description>
  <maintainer email="bwp18@case.edu">Benjamin Poulin</maintainer>
  <license>Apache License 2.0</license>

  <!-- For pip installing git packages -->
  <build_depend>git</build_depend>

  <exec_depend>python3-smbus</exec_depend>

  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pre-commit</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
