<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flight_control</name>
  <version>1.2.0</version>
  <description>Mate ROV sub movement controllers</description>
  <maintainer email="bwp18@case.edu">Benjamin</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>rov_msgs</depend>

  <exec_depend>python-pymavlink</exec_depend>
  <exec_depend>python-pygame</exec_depend>

  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pre-commit</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
