<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui</name>
  <version>1.2.0</version>
  <description>MATE ROV GUI and related ROS nodes</description>
  <maintainer email="bwp18@case.edu">Benjamin Poulin</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pre-commit</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- For CI gui-less testing -->
  <test_depend>xvfb</test_depend>
  <test_depend>python3-pytest-xvfb</test_depend>

  <exec_depend>rov_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <exec_depend>pyqt6-dev-tools</exec_depend>

  <depend>mavros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
