<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_gazebo</name>
  <version>1.2.0</version>
  <description>MATE ROV simulation</description>
  <maintainer email="sxj754@case.edu">Seongmin Jung</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>

  <test_depend>ament_mypy</test_depend>
  <test_depend>python3-pre-commit</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>ros_gz</depend>

  <export>
    <build_type>ament_python</build_type>
    <!-- Todo use gazebo_ros tag one day -->
  </export>
</package>
